youfull/objects/Seller_Status__c.object
<CustomObject>
    <fields>
        <fullName>CMPGN_TRGT_AMT__c</fullName>
        <formula>CTD_MIN_REQ_AWRD_SLS_AMT__c/ CYCLE_NR_OF_CMPGNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTD_MIN_REQ_AWRD_SLS_AMT__c</fullName>
        <label>Cycle to Date Required Sales Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURRNT_CTD_TRGT_AMT__c</fullName>
        <formula>CMPGN_TRGT_AMT__c* Market__r.CURRNT_CYCLE_CMPGN_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TY Cycle To Date Top Seller Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CYCLE_END_CMPGN__c</fullName>
        <label>Cycle End Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CYCLE_NR_OF_CMPGNS__c</fullName>
        <label>Cycle Number of Campaigns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CYCLE_STRT_CMPGN__c</fullName>
        <label>Cycle Start Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG_CD__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>et</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>th</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LCL_TOP_SLR_LVL_KEY__c</fullName>
        <externalId>true</externalId>
        <label>Top Seller Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCL_TOP_SLR_LVL_LANG_DESC_TXT__c</fullName>
        <label>Top Seller Level Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCL_TOP_SLR_LVL_LANG_SDESC_TXT__c</fullName>
        <label>Top Seller Level Short Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>Market id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_TOP_SLR_LANG_KEY__c</fullName>
        <externalId>true</externalId>
        <label>Top Seller key</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipName>Seller_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Top Seller</label>
    <nameField>
        <displayFormat>SS-{0000000}</displayFormat>
        <label>Seller Status Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top Seller</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>